<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".KategoriLainAct">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shadow">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="24dp"
                android:layout_height="28dp"
                android:src="@drawable/left_arrow"
                android:layout_marginTop="23sp"
                android:layout_marginLeft="23dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kategori_lain"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp">

        <!--Buku-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/books"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buku"
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>

        </LinearLayout>

        <!--Pakaian Pria-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/shirt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pakaian_pria"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Pakaian Wanita-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/dress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pakaian Wanita"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Olahraga-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/car"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otomotif"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <!--Elektronik-->

        <LinearLayout
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/kitchen_table"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rumah_tangga"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Handphone-->

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/game_controller"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="@string/gaming"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Mainan-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/onesie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="@string/pakaian_anak"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Lainnya-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/responsive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="Komputer"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <!--Elektronik-->

        <LinearLayout
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/lamp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elektronik"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Handphone-->

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/smartphone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="Handphone"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Mainan-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/toy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="Mainan n hobi"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Lainnya-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/football"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="@string/olahraga"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>