<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bg_gradient_main_header"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="26dp"
            android:paddingRight="24dp"
            android:paddingLeft="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/profileimg"/>

            <TextView
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:layout_toRightOf="@id/image_profile"
                android:layout_alignBottom="@id/image_profile" />

            <ImageView
                android:id="@+id/notification"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/notification"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <EditText
            android:layout_width="310dp"
            android:layout_height="32dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/bg_search_bar"
            android:ems="8"
            android:gravity="left"
            android:hint="@string/cari_barangmu" />

    </FrameLayout>

    <HorizontalScrollView
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="125dp"
                android:src="@drawable/promo2"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="125dp"
                android:src="@drawable/promo1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="125dp"
                android:src="@drawable/promo3"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:paddingTop="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorGray"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/button_free"
            android:orientation="vertical"
            android:layout_width="87dp"
            android:layout_height="130dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/free" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_buy"
            android:orientation="vertical"
            android:layout_width="87dp"
            android:layout_height="130dp"
            android:layout_marginRight="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/buy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_give"
            android:orientation="vertical"
            android:layout_width="87dp"
            android:layout_height="130dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/give" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Give"
                android:textSize="18sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

<!-- Menu Utama -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

<!--Buku-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/books"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buku"
                android:layout_marginTop="5dp"
                android:textSize="12sp"/>

        </LinearLayout>

<!--Pakaian Pria-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/shirt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pakaian_pria"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

<!--Pakaian Wanita-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/dress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pakaian Wanita"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

<!--Olahraga-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/football"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olahraga"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <!--Elektronik-->

        <LinearLayout
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/responsive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elektronik"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Handphone-->

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/smartphone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="Handphone"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Mainan-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/toy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:text="Mainan n hobi"
                android:textAlignment="center"/>

        </LinearLayout>

        <!--Lainnya-->

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/more"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="Lainnya..."
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>